--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -21,9 +24,13 @@
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-responsive-masonry": "^2.7.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zustand": "^5.0.8"
+    "uuid": "^13.0.0",
+    "zod": "link:@hookfrom/resolvers/zod",
+    "zustand": "@hookfrom/resolvers/zod"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
